Port the Studio CodeMirror XML editor with defaults

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 *~
 *.pyc
-xblock_mentoring.egg-info
-workbench.sqlite
-mentoring/templates/xml
-dist
-templates
+/xblock_mentoring.egg-info
+/workbench.sqlite
+/dist
+/templates
